--- a/air.toml
+++ b/air.toml
@@ -7,11 +7,11 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command
-cmd = "go build -o ./tmp/main ."
+cmd = "go build -o ./tmp/screenmoments ."
 # Binary file yields from `cmd`
-bin = "tmp/main"
+bin = "tmp/screenmoments"
 # Customize binary
-full_bin = "./tmp/main"
+full_bin = "./tmp/screenmoments"
 # Watch these filename extensions
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these paths/files
